--- a/question-1/q1.ipynb
+++ b/question-1/q1.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
     "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "from sklearn.metrics import confusion_matrix\n",
     "\n",
     "def read_data_file(filename: str) -> pd.DataFrame:\n",
     "    path = Path(os.getcwd() + 'q1.ipynb')\n",
@@ -35,111 +35,142 @@
     "\n",
     "\n",
     "features = read_data_file('CATSnDOGS.csv') / 255 # Rescale features to values between 0 and 1\n",
-    "labels = read_data_file('Labels.csv')"
+    "labels = read_data_file('Labels.csv')\n",
+    "\n",
+    "models = [\n",
+    "          ('SVM', SVC()),\n",
+    "          ('LogReg', LogisticRegression(max_iter=1000)), \n",
+    "          ('RF', RandomForestClassifier())\n",
+    "        ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "    fit_time  score_time  test_accuracy  test_precision  test_recall  \\\n",
-      "0   0.151121    0.046213       0.823529        0.777778        0.875   \n",
-      "1   0.118792    0.049701       0.823529        0.857143        0.750   \n",
-      "2   0.129698    0.043484       0.705882        1.000000        0.375   \n",
-      "3   0.114759    0.052727       0.941176        1.000000        0.875   \n",
-      "4   0.117213    0.042294       0.812500        0.857143        0.750   \n",
-      "5   0.092210    0.044382       0.625000        1.000000        0.250   \n",
-      "6   0.112166    0.049823       0.625000        0.666667        0.500   \n",
-      "7   0.101025    0.045671       0.937500        1.000000        0.875   \n",
-      "8   0.137376    0.044211       0.937500        0.888889        1.000   \n",
-      "9   0.465667    0.026216       0.764706        0.700000        0.875   \n",
-      "10  0.472822    0.027593       0.764706        0.750000        0.750   \n",
-      "11  0.424196    0.034567       0.529412        0.500000        0.375   \n",
-      "12  0.484139    0.037761       0.941176        0.888889        1.000   \n",
-      "13  0.485015    0.025845       0.687500        0.714286        0.625   \n",
-      "14  0.533168    0.027638       0.625000        0.750000        0.375   \n",
-      "15  0.505296    0.028639       0.625000        0.625000        0.625   \n",
-      "16  0.567452    0.033484       0.812500        0.777778        0.875   \n",
-      "17  0.442524    0.033705       0.750000        0.700000        0.875   \n",
-      "18  0.437655    0.040918       0.764706        0.700000        0.875   \n",
-      "19  0.394500    0.040420       0.764706        0.750000        0.750   \n",
-      "20  0.383575    0.041571       0.882353        0.875000        0.875   \n",
-      "21  0.389719    0.042525       0.882353        0.875000        0.875   \n",
-      "22  0.386277    0.040240       0.687500        0.714286        0.625   \n",
-      "23  0.388779    0.039953       0.625000        0.750000        0.375   \n",
-      "24  0.384612    0.041261       0.687500        0.714286        0.625   \n",
-      "25  0.389478    0.042341       0.812500        0.857143        0.750   \n",
-      "26  0.399758    0.039853       0.875000        0.800000        1.000   \n",
-      "\n",
-      "     test_f1   model  \n",
-      "0   0.823529     SVM  \n",
-      "1   0.800000     SVM  \n",
-      "2   0.545455     SVM  \n",
-      "3   0.933333     SVM  \n",
-      "4   0.800000     SVM  \n",
-      "5   0.400000     SVM  \n",
-      "6   0.571429     SVM  \n",
-      "7   0.933333     SVM  \n",
-      "8   0.941176     SVM  \n",
-      "9   0.777778  LogReg  \n",
-      "10  0.750000  LogReg  \n",
-      "11  0.428571  LogReg  \n",
-      "12  0.941176  LogReg  \n",
-      "13  0.666667  LogReg  \n",
-      "14  0.500000  LogReg  \n",
-      "15  0.625000  LogReg  \n",
-      "16  0.823529  LogReg  \n",
-      "17  0.777778  LogReg  \n",
-      "18  0.777778      RF  \n",
-      "19  0.750000      RF  \n",
-      "20  0.875000      RF  \n",
-      "21  0.875000      RF  \n",
-      "22  0.666667      RF  \n",
-      "23  0.500000      RF  \n",
-      "24  0.666667      RF  \n",
-      "25  0.800000      RF  \n",
-      "26  0.888889      RF  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def compare_ensemble(models: list(), features: pd.DataFrame, labels: pd.DataFrame) -> pd.DataFrame:\n",
-    "    X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.25, random_state=42)\n",
+    "# rename\n",
+    "def evaluate_ensemble(models: list, features: pd.DataFrame, labels: pd.DataFrame) -> pd.DataFrame:\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.25, stratify=labels, random_state=None)\n",
     "    dfs = []\n",
     "    scoring = ['accuracy', 'precision', 'recall', 'f1']\n",
-    "    target_names = ['cat', 'dog']\n",
     "\n",
     "    for name, model in models:\n",
     "        kfold = StratifiedKFold(n_splits=9, shuffle=True, random_state=42)\n",
-    "        cv_results = cross_validate(model, X_train, y_train.to_numpy().ravel(), cv=kfold, scoring=scoring)\n",
+    "        cross_validate(model, X_train, y_train.to_numpy().ravel(), cv=kfold, scoring=scoring)\n",
     "        clf = model.fit(X_train, y_train.to_numpy().ravel())\n",
     "        y_pred = clf.predict(X_test)\n",
     "        \n",
-    "        print(name)\n",
-    "        print(classification_report(y_test, y_pred, target_names=target_names))\n",
-    "\n",
-    "        df = pd.DataFrame(cv_results)\n",
-    "        df['model'] = name\n",
+    "        df = pd.DataFrame({'_id': y_test.index.values, 'true': y_test.to_numpy().ravel(), 'predicted': y_pred, 'model': name})\n",
     "        dfs.append(df)\n",
     "\n",
     "    result = pd.concat(dfs, ignore_index=True)\n",
     "    return result\n",
     "\n",
     "\n",
-    "# Fix so that LogisticRegression is used with optimal parameter? Any other settings to improve SVC, RandomForest?\n",
-    "models = [\n",
-    "          ('SVM', SVC()),\n",
-    "          ('LogReg', LogisticRegression(max_iter=1000)), \n",
-    "          ('RF', RandomForestClassifier())\n",
-    "        ]\n",
+    "# want: mean and std for each scoring, for each model over iterations\n",
+    "def average_scores(models: list, features: pd.DataFrame, labels: pd.DataFrame, iter: int=5):\n",
+    "    matrix = []\n",
+    "    for it in range(iter):\n",
+    "        res = evaluate_ensemble(models, features, labels)\n",
+    "        scores = calc_scores(res)\n",
+    "        matrix.append(scores)\n",
+    "    \n",
+    "    mean = np.mean(matrix, axis=0)\n",
+    "    std = np.std(matrix, axis=0)\n",
+    "    return mean, std\n",
     "\n",
-    "results = compare_ensemble(models, features, labels)\n",
-    "#print(results)"
+    "    \n",
+    "# want: score for each scoring for each model\n",
+    "def calc_scores(ensemble_result: pd.DataFrame) -> np.ndarray:\n",
+    "    model_names = ensemble_result.model.unique()\n",
+    "    scores = np.zeros((len(model_names), 3))\n",
+    "\n",
+    "    for i, name in enumerate(model_names):\n",
+    "        this_df = ensemble_result[ensemble_result.model == name]\n",
+    "        y_true = this_df['true']\n",
+    "        y_pred = this_df['predicted']\n",
+    "\n",
+    "        cm = confusion_matrix(y_true, y_pred)\n",
+    "        tn, fp, fn, tp = cm.ravel()\n",
+    "        cat_accuracy = tn / (tn + fp) # specificity\n",
+    "        dog_accuracy = tp / (tp + fn) # recall\n",
+    "        accuracy = (tn + tp)/(tn + fp + fn + tp)\n",
+    "        scores[i][0] = cat_accuracy\n",
+    "        scores[i][1] = dog_accuracy\n",
+    "        scores[i][2] = accuracy\n",
+    "\n",
+    "    return scores\n",
+    "\n",
+    "\n",
+    "def detect_mislabels(models: list, features: pd.DataFrame, labels: pd.DataFrame, iter: int = 5, vote_limit: float = 0.5) -> dict:  \n",
+    "    dfs = []\n",
+    "    mislabels = {}\n",
+    "\n",
+    "    for it in range(iter):\n",
+    "        res = evaluate_ensemble(models, features, labels)\n",
+    "        res['vote'] = np.absolute(res.true-res.predicted)\n",
+    "        dfs.append(res)\n",
+    "\n",
+    "    df = pd.concat(dfs, ignore_index=True)\n",
+    "    model_names = df.model.unique()\n",
+    "\n",
+    "    for i, name in enumerate(model_names):\n",
+    "        mislabelled_ids = []\n",
+    "        model_df = df[df.model == name]\n",
+    "        _ids = model_df._id.unique()\n",
+    "\n",
+    "        for _id in _ids:\n",
+    "            _id_df = model_df[model_df._id == _id]\n",
+    "            total = len(_id_df.index)\n",
+    "            vote = _id_df['vote'].sum()\n",
+    "            if vote/total < vote_limit:\n",
+    "                continue\n",
+    "            else:\n",
+    "                mislabelled_ids.append(_id)\n",
+    "\n",
+    "        mislabels[name] = mislabelled_ids\n",
+    "\n",
+    "    return mislabels\n",
+    "\n",
+    "\n",
+    "mean, std = average_scores(models, features, labels)\n",
+    "mislabels = detect_mislabels(models, features, labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{8, 139, 14, 21, 151, 26, 158, 37, 168, 176, 180, 53, 54, 58, 63, 192, 78, 79, 85, 90, 93, 96, 113, 114, 124}\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "not enough arguments for format string",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-29-ea163f432895>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mintersection\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmislabels_svm\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintersection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmislabels_logreg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mintersection\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmislabels_rf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mintersection\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"%s \\% of mislabels by the SVM is shared by all models.\"\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mintersection\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmislabels_svm\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: not enough arguments for format string"
+     ]
+    }
+   ],
+   "source": [
+    "mislabels_svm = set(mislabels['SVM'])\n",
+    "mislabels_logreg = set(mislabels['LogReg'])\n",
+    "mislabels_rf = set(mislabels['RF'])\n",
+    "\n",
+    "intersection = mislabels_svm.intersection(mislabels_logreg).intersection(mislabels_rf)\n",
+    "print(intersection)\n",
+    "print(\"%s \\% of mislabels by the SVM is shared by all models.\" % len(intersection)/len(mislabels_svm)*100)"
    ]
   }
  ],
