--- a/question-1/q1a.ipynb
+++ b/question-1/q1a.ipynb
@@ -12,15 +12,13 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "from sklearn.model_selection import train_test_split, StratifiedKFold, cross_validate\n",
-    "from sklearn.svm import SVC, LinearSVC\n",
+    "from sklearn.svm import SVC\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.feature_selection import VarianceThreshold, SelectFromModel, SelectKBest, chi2\n",
-    "from sklearn.pipeline import Pipeline\n",
     "\n",
     "def read_data_file(filename: str) -> pd.DataFrame:\n",
-    "    path = Path(os.getcwd() + 'q1.ipynb')\n",
+    "    path = Path(os.getcwd() + 'q1a.ipynb')\n",
     "    data_folder = str(path.parent.absolute()) + '/data/'\n",
     "    return pd.read_csv(data_folder + filename)\n",
     "\n",
