--- a/question-1/q1a.ipynb
+++ b/question-1/q1a.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x\n",
+      "1    101\n",
+      "0     97\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
