--- a/question-1/q1f.ipynb
+++ b/question-1/q1f.ipynb
@@ -106,13 +106,16 @@
     "subset_cluster_labels = subset_means.labels_\n",
     "\n",
     "model = ['SVM', SVC()]\n",
-    "tuned_model = q1a.tune_ensemble(model, cat_subset, pd.DataFrame(subset_cluster_labels))\n",
+    "tuned_model = q1a.tune_ensemble(q1a.reset(model), cat_subset, pd.DataFrame(subset_cluster_labels))\n",
+    "iter = 1\n",
+    "for i in range(iter):\n",
+    "    X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.25, stratify=labels, random_state=None)\n",
+    "\n",
     "result = q1a.evaluate_ensemble(tuned_model, cat_subset, pd.DataFrame(subset_cluster_labels))\n",
     "scores = q1a.calc_scores(result)\n",
     "\n",
     "mean, std = q1a.average_scores(tuned_model, cat_subset, pd.DataFrame(subset_cluster_labels), iter=20)\n",
     "\n",
-    "# Fixa q1b?\n",
     "# Does learning cat cluster labels identify characteristics in the data that separate cats from dogs?"
    ]
   }
